Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the installer samples.


Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Jul-2008 Sam Moffatt
 + Added sample SQL files for the site module sample

18-Jul-2008 Sam Moffatt
 + Added Makefiles
 + Added submenu items to com_alpha
 + Gave com_alpha a title 

17-Jul-2008 Sam Moffatt
 + Added a system plugin, an interesting day!

16-Jul-2008 Sam Moffatt
 + Added simple library

15-Jul-2008 Sam Moffatt
 + Added site module
 ^ Finished admin module

14-Jul-2008 Sam Moffatt
 + Started work on admin modules
 ^ Improved com_alpha to support new language support in installer
 ^ Changed SQL files to be more tolerant
 + Added CHANGELOG