@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension version="1.6" type="plugin"  group="system">
+<extension version="1.6" type="plugin" group="system" method="upgrade">
 	<name>System - Alpha</name>
 	<creationDate>July 2008</creationDate>
 	<author>John Doe</author>
@@ -9,8 +9,33 @@
 	<license>License Info</license>
 	<version>1.6</version>	
 	<description>Alpha Plugin</description>
+	
+	<scriptfile>alpha.scriptfile.php</scriptfile> <!-- New for 1.6 -->
+	
+	<!-- SQL Files -->
+	<!-- Note: SQL Support added in 1.6 for modules and plugins -->
+	<install> <!-- Runs on install -->
+		<sql>
+			<file driver="mysql" charset="utf8">sql/install.mysql.utf8.sql</file>
+			<file driver="mysql">sql/install.mysql.nonutf8.sql</file>
+		</sql>
+	</install>
+	<uninstall> <!-- Runs on uninstall -->
+		<sql>
+			<file driver="mysql" charset="utf8" folder="sql">sql/uninstall.mysql.utf8.sql</file>
+			<file driver="mysql" folder="sql">sql/uninstall.mysql.nonutf8.sql</file>
+		</sql>
+	</uninstall>
+	<update> <!-- Runs on update -->
+		<sql>
+			<file driver="mysql" charset="utf8">sql/update.mysql.utf8.sql</file>
+			<file driver="mysql">sql/update.mysql.nonutf8.sql</file>
+		</sql>
+	</update>
+			
 	<files>
 		<filename plugin="alpha">alpha.php</filename>
+		<folder>sql</folder>
 	</files>
 	<params>
 		<param name="demo" type="text" default="" label="Demo Param" description="DEMOPARAMDESC" />
