@@ -1,0 +1,2 @@
+DROP TABLE IF EXISTS #__plgSystemAlpha_nonutf8_install;
+DROP TABLE IF EXISTS #__plgSystemAlpha_nonutf8_update;
