@@ -1,0 +1,2 @@
+DROP TABLE IF EXISTS #__plgSystemAlpha_utf8_install;
+DROP TABLE IF EXISTS #__plgSystemAlpha_utf8_update;
