@@ -1,0 +1,1 @@
+CREATE TABLE IF NOT EXISTS #__plgSystemAlpha_nonutf8_update ( fielda int(10) )
