@@ -14,6 +14,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Jul-2008 Sam Moffatt
+ + Added sample SQL files and custom triggers for the system plugin sample
+
 22-Jul-2008 Sam Moffatt
  + Added sample SQL files for the site module sample
 
